--- a/node-express/package.json
+++ b/node-express/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "private": "true",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "nodemon",
     "start": "node index.js"
@@ -12,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nanoid": "^4.0.0"
   }
 }
