--- a/node-express/package.json
+++ b/node-express/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "nanoid": "^4.0.0"
+    "nanoid": "^4.0.0",
+    "pg": "^8.8.0"
   }
 }
