--- a/node-fastify/package.json
+++ b/node-fastify/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@fastify/static": "^6.5.0",
     "fastify": "^4.9.2",
-    "nanoid": "^4.0.0"
+    "nanoid": "^4.0.0",
+    "pg": "^8.8.0"
   }
 }
