--- a/node-fastify/project.env
+++ b/node-fastify/project.env
@@ -1,4 +1,4 @@
-# Database configuration for PostgreSQL (running in container called "dab-p1-database-1b3da8a6-8f97-4a9f-956b-34b997d5f686")
+# Database configuration for PostgreSQL (running in container called "dab-p1-database-fastify")
 POSTGRES_USER=username
 POSTGRES_PASSWORD=password
 POSTGRES_DB=database
@@ -6,11 +6,11 @@ POSTGRES_DB=database
 # Database configuration for Flyway (used for database migrations)
 FLYWAY_USER=username
 FLYWAY_PASSWORD=password
-FLYWAY_URL=jdbc:postgresql://dab-p1-database-1b3da8a6-8f97-4a9f-956b-34b997d5f686:5432/database
+FLYWAY_URL=jdbc:postgresql://dab-p1-database-fastify:5432/database
 
-# Database configuration for Deno's PostgreSQL driver
+# Database configuration for PG's PostgreSQL driver
 PGUSER=username
 PGPASSWORD=password
-PGHOST=dab-p1-database-1b3da8a6-8f97-4a9f-956b-34b997d5f686
+PGHOST=dab-p1-database-fastify
 PGPORT=5432
 PGDATABASE=database
