--- a/node-fastify/docker-compose.yml
+++ b/node-fastify/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.4"
 
 services:
-  bitly:
+  bitly-fastify:
     build: .
     restart: "no"
     volumes:
@@ -9,22 +9,22 @@ services:
     ports:
       - 4000:4000
     depends_on:
-      - database
-      - flyway
+      - database-fastify
+      - flyway-fastify
     env_file:
       - project.env
 
-  database:
-    container_name: dab-p1-database-1b3da8a6-8f97-4a9f-956b-34b997d5f686
+  database-fastify:
+    container_name: dab-p1-database-fastify
     image: postgres:14.1
     restart: "no"
     env_file:
         - project.env
 
-  flyway:
+  flyway-fastify:
     image: flyway/flyway:8.4.0-alpine
     depends_on:
-      - database
+      - database-fastify
     volumes:
       - .:/flyway/sql
     command: -connectRetries=60 -baselineOnMigrate=true migrate
